...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    tools:context=".activities.SearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="3dp"
        android:background="@drawable/rounded_corners_with_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/search_here"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
...
        android:layout_height="wrap_content"
        android:textSize="2sp"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintTop_toBottomOf="@+id/current_location_row"/>

    <TextView
        android:id="@+id/next_class_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_class"
        android:textSize="24sp"
        android:paddingStart="5dp"
        android:background="@color/whiteBackgroundColor"
        app:layout_constraintTop_toBottomOf="@+id/spacing_above_next_class"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/next_class_row"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/whiteBackgroundColor"
        app:layout_constraintTop_toBottomOf="@id/next_class_title">

        <LinearLayout android:orientation="vertical"
...
            tools:layout_editor_absoluteY="3dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/searchResults"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@color/whiteBackgroundColor"
        android:dividerHeight="1dp"
...
