...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="12"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/place_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_margin="3dp"
        android:layout_weight="0.3"
        app:srcCompat="@drawable/ic_place_pink" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="8dp"
...
