<resources>
    <string name="app_name">Concordia-Campus-Guide</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_routes">RoutesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="point_of_interest_explore">Explore</string>
    <string name="warning_msg">No routes available.</string>
    <string name="french">French</string>
    <string name="calendar">Google Calendar</string>
    <string name="accessibility">Accessibility</string>
    <string name="staff">Staff</string>
    <string name="small_info_card_directions_button">Directions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_location">My location: </string>
    <string name="my_current_location">My Current Location</string>
    <string name="no_shuttle">No shuttles available at this time</string>
    <string name="no_routes">No routes available, please change the filter criteria.</string>
    <string name="departments">Departments</string>
    <string name="services">Services</string>
    <string name="indoor_map">Indoor Map</string>
    <string name="directions">Directions</string>
    <string name="no_classes_today">No classes today</string>
    <string name="sgw">SGW</string>
    <string name="loyola">Loyola</string>
    <string name="show_on_map">Show on Map</string>
    <string name="next_class">Next class</string>
    <string name="from_location">From</string>
    <string name="to_destination">To</string>
    <string name="calendar_text_header">Heads up... Your next class is in </string>
    <string name="calendar_text_end"> ! Please choose to either get directions to your class or to ignore this message</string>
    <string name="calendar_text_header_late">Heads up... Your class has already started before </string>
    <string name="you_have">You have </string>
    <string name="at">at </string>
    <string name="in"> in </string>
    <string name="show_me_direction">Show me Directions</string>
    <string name="ignore">Ignore</string>
    <string name="your">Your </string>
    <string name="already_started"> has started before </string>
    <string name="location_format_wrong">Location Format is Wrong</string>
    <string name="location_format_wrong_description">The location of your upcoming event hasn\'t been inserted correctly (e.g. \'H-9, 963\')</string>
    <string name="search_here">Search here</string>
    <string name="lounges">Lounges</string>
    <string name="washroom">Washroom</string>
    <string name="water_fountains">Water Fountain</string>
    <string name="stairs">Stairs</string>
    <string name="elevator">Elevator</string>
    <string name="select_location">Select Location</string>
    <string name="hours">hours</string>
    <string name="and">and</string>
    <string name="incorrect_format_event">Event is incorrectly formatted</string>
    <string name="location_not_found">Location not found</string>
    <string name="leave_classroom">Leave classroom</string>
    <string name="enter_building">Enter building</string>
    <string name="walk_towards">Walk towards </string>
    <string name="minutes">min</string>
</resources>
