...
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar" />
        <item android:id="@+id/nav_translate"
            android:icon="@drawable/ic_french"
            android:title="@string/french"
            app:actionLayout="@layout/widget_switch"/>
        <item android:id="@+id/nav_accessibility"
            android:icon="@drawable/ic_accessibility"
            android:title="@string/accessibility"
...
