...
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_line_grey"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
...
