...
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_building" />

        <TextView
            android:id="@+id/serviceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>
...
